upcxx-2023.9.0/test/neg/neg-rpc_ff12.errc
All rvalue rpc arguments must be MoveConstructible.
